09 Admin/App Data/Noctyrium/Diagnostics/noctyrium_productivity_offset_counter_fix.2026-05-01_14-31-32.txt
===== NOCTYRIUM PRODUCTIVITY OFFSET COUNTER FIX =====
Version remains locked: v0.03.01

Swift backup:
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.before-productivity-offset-counter-fix.2026-05-01_14-31-32.swift

===== VERIFY CURRENT SOURCE COMPILES =====
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:961:13: warning: variable 'lines' was never mutated; consider changing to 'let' constant
        var lines = raw.components(separatedBy: .newlines).filter { !$0.trimmingCharacters(in: .whitespaces).isEmpty }
        ~~~ ^
        let
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2443:9: warning: initialization of immutable value 'nb3YoungOrBetter' was never used; consider replacing with assignment to '_' or removing it
    let nb3YoungOrBetter = nb3Core.filter { $0.quality >= 2 }
    ~~~~^~~~~~~~~~~~~~~~
    _
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3074:25: warning: result of call to 'shell' is unused
                        shell("open \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3078:25: warning: result of call to 'shell' is unused
                        shell("open -R \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Current source compiles.

===== PATCHING OFFSET-BASED COUNTERS =====

===== NORMALIZING OFFSET FILE ONLY =====

===== COMPILE TEST =====
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:408:19: error: cannot find 'nowStamp' in scope
        let now = nowStamp()
                  ^~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:434:44: error: cannot infer contextual base in reference to member 'utf8'
            if let data = row.data(using: .utf8) {
                                          ~^~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:999:13: warning: variable 'lines' was never mutated; consider changing to 'let' constant
        var lines = raw.components(separatedBy: .newlines).filter { !$0.trimmingCharacters(in: .whitespaces).isEmpty }
        ~~~ ^
        let
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2481:9: warning: initialization of immutable value 'nb3YoungOrBetter' was never used; consider replacing with assignment to '_' or removing it
    let nb3YoungOrBetter = nb3Core.filter { $0.quality >= 2 }
    ~~~~^~~~~~~~~~~~~~~~
    _
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3112:25: warning: result of call to 'shell' is unused
                        shell("open \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3116:25: warning: result of call to 'shell' is unused
                        shell("open -R \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Compile failed. Restoring backup.
Restored: /Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.before-productivity-offset-counter-fix.2026-05-01_14-31-32.swift
Report: /Users/jd/Medical School/09 Admin/App Data/Noctyrium/Diagnostics/noctyrium_productivity_offset_counter_fix.2026-05-01_14-31-32.txt
